fixed page shift actually this time (hopefully)

--- a/src/app/static/base.css
+++ b/src/app/static/base.css
@@ -5,6 +5,7 @@ body {
   color: var(--text-colour-primary);
   margin: 0;
   overflow-x: hidden;
+  min-height: 100svh;
 }
 
 /* ======================= HEADER STYLE ======================= */
@@ -179,13 +180,18 @@ header {
 
 
 /* ======================= SCROLL EFFECT ======================= */
+.scroll-div {
+  position: relative;
+  overflow: hidden;
+}
+
 .hidden {
   visibility: hidden;
   opacity: 0;
   filter: blur(5px);
   transform: translateX(100%);
   transition: all 1s;
-  position: absolute;
+  position: fixed;
 }
 
 .show {
